# Python-Portfolio

./: .gitignore
Research/ascii_art/: ascii.odt  ascii.txt  main.py  pyproject.toml
Research/csv/: README.md  csv_tests.ipynb  cumulative.csv  eight.csv  fifth.csv  first.csv  fourth.csv  lkcs_tests.ipynb  memray-flamegraph-reducer1.py.132179.html  memray-flamegraph-reducer5.py.132725.html  ninth.csv  pyproject.toml  reducer1.py  reducer2.py  reducer3.py  reducer4.py  reducer5.py  remove_cumulative.py  second.csv  seventh.csv  sixth.csv  tenth.csv  third.csv
s3MultiProcessWrite/: benchmark.py  demo.sh  localstack_setup.sh  pyproject.toml  timer.py
s3MultiProcessWrite/gen_dev_data/: makeTestFiles.py  makeTestFiles_async.py
s3MultiProcessWrite/implementations/: multipart.py  process_pool_multipart.py  sequential_boto3.py  sequential_multipart_boto3.py  sequential_multipart_smart_boto3.py  sequential_smart_open.py  thread_pool_multipart.py  thread_pool_multipart_smart_boto.py
