[tool.poetry]
name = "s3multiprocesswrite"
version = "0.1.0"
description = ""
authors = ["Antonio Zea Jr <zeajantonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.161"
smart-open = "^6.3.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
localstack = "^2.1.0"
awscli-local = "^0.20"
black = {extras = ["d"], version = "^23.3.0"}
isort = "^5.12.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.7.1"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
